# TUKaiserslauternLTD

./: Hiwi.txt  Project Final Steps.txt  README.md  RecentWork.txt  Reference.txt  kpatel.sql  need to take care.txt
LtdFileParser/: CMakeLists.txt  FileProcessor.cpp  FileProcessor.h  main.cpp
MASTER/: Ethan.molecule  Skript_postIndent.sh  Skript_postRelaxFluid.sh  Skript_postRelaxSubstrate.sh  Skript_postScratch.sh  Skript_postinsSphereInterim.sh  in.relaxFluid
MasterInputFiles/: in.Indent  in.Remove  in.Scratch  in.relaxFluid
SimulationFileParser/: CMakeLists.txt  main.cpp
SimulationFileParser/forcefield/: FORCE_FIELDS  Methanol.molecule  Propan.molecule  in.DUMMY  in.SPC  in.SPC_Harmonic  in.nButan_OPLSAmb  isoButan.molecule  nButan.molecule
SimulationFileParser/input/: in.Indent  in.Remove  in.Scratch  in.relaxFluid  in.relaxSubstrate
SimulationFileParser/output/: in.Indent  in.Remove  in.Scratch  in.relaxFluid  in.relaxSubstrate
SimulationFileParser/sourceFiles/classes/: fileProcessor.cpp  forceFieldProcessor.cpp  forceIOFuncation.cpp  globalFun.cpp  globalVar.cpp  userAskFuncation.cpp  userIOFuncation.cpp
SimulationFileParser/sourceFiles/headers/: fileProcessor.h  forceFieldProcessor.h  globalFun.h  globalVar.h
SimulationParser/: CMakeLists.txt  FileProcessor.cpp  FileProcessor.h  Functions.cpp  Globals.cpp  Solid.molecule  StoreVariable.cpp  StoreVariable.h  in.Indent  in.Remove  in.Scratch  in.relaxFluid  in.relaxSubstrate  main  main.cpp
StringProcesssor/: CMakeLists.txt  main.cpp
TestTest/: CMakeLists.txt  main.cpp
extra/TestTest/: add.cpp  (+8 more)
(+383 files in other folders)
